--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -30,7 +30,12 @@
         tools:layout="@layout/fragment_overview" >
         <action
             android:id="@+id/action_showDetail"
-            app:destination="@id/detailFragment" />
+            app:destination="@id/detailFragment" >
+            <argument
+                android:name="mars_property"
+                app:argType="com.example.android.marsrealestate.network.MarsProperty"
+            />
+        </action>
     </fragment>
 
     <fragment
